--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -15,11 +15,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: $base-font-size * 2.25; // 16 * 2.25 = 36px
+  font-size: $base-font-size * 4; // 16 * 2.25 = 36px
 }
 
 h2 {
-  font-size: $base-font-size * 2; // 16 * 2 = 32px
+  font-size: $base-font-size * 2.75; // 16 * 2 = 32px
 }
 
 h3 {
@@ -27,7 +27,8 @@ h3 {
 }
 
 h4 {
-  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+    font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+  font-weight: 400;
 }
 
 h5 {
