--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -6,7 +6,8 @@
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %title= current_page.data.title || "The Middleman"
     = stylesheet_link_tag "application"
-
+    %link{:href => "http://fonts.googleapis.com/css?family=Raleway:700,400,300", :rel => "stylesheet", :type => "text/css"}/
+    
   %body{class: page_classes}
     = yield
     = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "application"
