--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -1,12 +1,19 @@
 ---
-title: Page Title
+title: MBTI Quiz
 ---
 
 %header.hero
+  .video-container
+    %video{autoplay: "", height: "auto", loop: "loop", muted: "muted", preload: "auto", width: "100%"}
+      %source{:src => "assets/images/header.mp4", :type => "video/mp4"}
+      %img{:src => ""}
+  .color
+
   %h1 What's Your Type?
   %h4
     A 4-Question
     Myers-Briggs Personality Quiz
+
 
 #section
   .row
