--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -20,6 +20,8 @@ $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 $dark-gray: #2e393e;
+$green: #60c4ba;
+$red: #ed6764;
 
 // Background Color
 $base-background-color: white;
