--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -5,15 +5,14 @@ title: What's Your Type
 %header.hero
   .video-container
     %video{autoplay: "", height: "auto", loop: "loop", muted: "muted", preload: "auto", width: "100%"}
-      %source{:src => "assets/images/video.mp4", :type => "video/mp4"}
-      %img{:src => "http://images.thoughtbot.com/EOY-2014/company-photo.png"}
+      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/video.mp4", :type => "video/mp4"}
     .color
     .header-copy
       %h1 What's Your Type?
       %h4
         A 4-question Myers-Briggs personality quiz
 
-      .arrow ⬇
+    %p (scroll down to start)
 
 
 #section
