--- a/source/assets/stylesheets/_global.css.scss
+++ b/source/assets/stylesheets/_global.css.scss
@@ -6,15 +6,26 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+.hero {
+
+}
+
 .video-container {
   @include animation(slideDown 0.6s .55s 1 backwards);
   padding-bottom: 56.25%;
   position: relative;
   height: 0;
+
+  p {
+    @include position (absolute, null null 100px 50%);
+    color: white;
+    width: 200px;
+    margin-left: -100px;
+  }
 }
 
 video {
-  @include position(absolute, 0px 0px 0px 0px);
+  @include position(absolute, 0px 50% 0px 0px);
 }
 
 .color {
@@ -28,12 +39,12 @@ header {
 }
 
 .header-copy {
-  @include position(absolute, 0px 0px 0px 0px);
-  color: white;
+  @include position(absolute, 0px 0px 0px 0px);;
   @include align-items(center);
   @include display(flex);
   @include flex-direction(column);
   @include justify-content(center);
+  color: white;
 
   h1 {
     font-weight: 700;
@@ -41,7 +52,7 @@ header {
   }
 
   h4 {
-    margin-top: 25px;
+    margin: 25px 0 100px;
     font-weight: 400;
   }
 
