--- a/source/assets/stylesheets/application.css.scss
+++ b/source/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "vendor/normalize";
 @import "bourbon";
 @import "neat";
+@import "neat-helpers";
 
 @import "base/base";
 @import "global";
