--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -60,7 +60,7 @@ title: What's Your Type
   %h3 Well done! You're likely a...
   %h2
     %a{:target => "_blank", :class => "mbti-letters"}
-  %h3.read-more Clicking above to learn more
+  %p Click above to learn more
 
 %section.explore
   .wrapper
