--- a/source/assets/stylesheets/_global.css.scss
+++ b/source/assets/stylesheets/_global.css.scss
@@ -6,21 +6,18 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-.hero {
-
-}
-
 .video-container {
   @include animation(slideDown 0.6s .55s 1 backwards);
   padding-bottom: 56.25%;
   position: relative;
-  height: 0;
 
   p {
+    display: none;
 
     @include media($medium-screen) {
       @include position (absolute, null null 100px 50%);
       color: white;
+      display: initial;
       width: 200px;
       margin-left: -100px;
     }
@@ -49,14 +46,15 @@ header {
   @include justify-content(center);
   color: white;
 
-  h1 {
-    font-weight: 700;
-    z-index: 10;
-  }
 
   h4 {
     margin: 25px 0 100px;
     font-weight: 400;
+    display: none;
+
+    @include media($medium-screen) {
+      display: initial;
+    }
   }
 }
 
@@ -69,12 +67,15 @@ header {
 }
 
 .button-wrapper {
-  @include span-columns(12);
-  @include omega;
 
   h4 {
     color: $medium-gray;
     font-weight: 400;
+  }
+
+  @include media($large-screen) {
+    @include span-columns(12);
+    @include omega;
   }
 
   @include media($medium-screen) {
