--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -2,7 +2,7 @@
 title: What's Your Type
 ---
 
-%header.hero
+%header
   .video-container
     %video{autoplay: "", height: "auto", loop: "loop", muted: "muted", preload: "auto", width: "100%"}
       %source{:src => "https://dl.dropboxusercontent.com/u/6564676/video.mp4", :type => "video/mp4"}
