--- a/source/assets/stylesheets/_global.css.scss
+++ b/source/assets/stylesheets/_global.css.scss
@@ -48,6 +48,7 @@ header {
 
   h1 {
     font-size: em(35);
+    padding: em(30) 0 em(10);
 
     @include media($mobile-screen) {
       font-size: em(65);
