--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -81,7 +81,7 @@ title: What's Your Type
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ESFP", :target => "_blank"} ESFP
           %li
-            %a{:href => "http://en.wikipedia.org/wiki/ISTP", :target => "_blank"} ISTP
+            %a{:href => "http://en.wikipedia.org/wiki/ISTP_(personality_type)", :target => "_blank"} ISTP
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ISFP", :target => "_blank"} ISFP
 
