--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -20,7 +20,7 @@ title: What's Your Type
     .wrapper
       %h2 1) I tend to be...
       .button-wrapper
-        .button1{:data => {:letter => "E"}} Extraverted
+        .button1{:data => {:letter => "E"}} Extroverted
         %h4 I get energy by being with people
       .button-wrapper
         .button2{:data => {:letter => "I"}} Introverted
