--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -6,7 +6,8 @@ title: What's Your Type
   .video-container
     %video{autoplay: "autoplay", height: "auto", loop: "loop", muted: "muted", preload: "auto", width: "100%"}
       %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.mp4", :type => "video/mp4"}
-      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.webm", :type => "video/mp4"}
+      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.webm", :type => "video/webm"}
+      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.ogg", :type => "video/ogg"}
     .color
     .header-copy
       %h1 What's Your Type?
