--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -6,14 +6,16 @@ title: What's Your Type
   .video-container
     %video{autoplay: "autoplay", height: "auto", loop: "loop", muted: "muted", preload: "auto", width: "100%"}
       %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.mp4", :type => "video/mp4"}
-      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.webm", :type => "video/mp4"}
+      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.webm", :type => "video/webm"}
+      %source{:src => "https://dl.dropboxusercontent.com/u/6564676/MBTI-Test.ogg", :type => "video/ogg"}
     .color
     .header-copy
       %h1 What's Your Type?
       %h4
         A 4-question Myers-Briggs personality quiz
 
-    %p (scroll down to start)
+      .scroll
+        %p (scroll down to start)
 
 
 #section
@@ -73,10 +75,10 @@ title: What's Your Type
         understand yourself and those around you. Explore the links below to learn more.
 
     .types-wrapper
-      .the-artisan.types
+      .the-artisan.types.group1
         %h2 The Artisan
-        %h5 Driven by spontineity & freedom
-        %ul
+        %h5 Driven by spontineity &amp; freedom
+        %ul.the-artisan-list
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ESTP", :target => "_blank"} ESTP
           %li
@@ -86,10 +88,10 @@ title: What's Your Type
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ISFP", :target => "_blank"} ISFP
 
-      .the-guardian.types
+      .the-guardian.types.group2
         %h2 The Guardian
-        %h5 Driven by responsibility & security
-        %ul
+        %h5 Driven by responsibility &amp; security
+        %ul.the-guardian-list
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ESTJ", :target => "_blank"} ESTJ
           %li
@@ -99,10 +101,10 @@ title: What's Your Type
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ISFJ", :target => "_blank"} ISFJ
 
-      .the-rationalist.types
+      .the-rationalist.types.group1
         %h2 The Rationalist
-        %h5 Driven by knowledge & mastery
-        %ul
+        %h5 Driven by knowledge &amp; mastery
+        %ul.the-rationalist-list
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ENTP", :target => "_blank"} ENTP
           %li
@@ -112,10 +114,10 @@ title: What's Your Type
           %li
             %a{:href => "http://en.wikipedia.org/wiki/INTJ", :target => "_blank"} INTJ
 
-      .the-idealist.types
+      .the-idealist.types.group2
         %h2 The Idealist
-        %h5 Driven by meaning & identity
-        %ul
+        %h5 Driven by meaning &amp; identity
+        %ul.the-idealist-list
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ENFP", :target => "_blank"} ENFP
           %li
