--- a/source/views/index.html.haml
+++ b/source/views/index.html.haml
@@ -77,7 +77,7 @@ title: What's Your Type
     .types-wrapper
       .the-artisan.types.group1
         %h2 The Artisan
-        %h5 Driven by spontineity &amp; freedom
+        %h5 Driven by spontaneity &amp; freedom
         %ul.the-artisan-list
           %li
             %a{:href => "http://en.wikipedia.org/wiki/ESTP", :target => "_blank"} ESTP
